Container no longer cuts off (overflow) animations

--- a/src/Recipe/RecipeView.css
+++ b/src/Recipe/RecipeView.css
@@ -2,7 +2,7 @@
     display: inline-block;
     /* white-space: nowrap; */
     /* overflow-x: scroll; */
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
 /* .RecipeView::-webkit-scrollbar {
